--- a/diseños/mobile.css
+++ b/diseños/mobile.css
@@ -8,6 +8,7 @@ font-size: 62.5%;
 }
 /* Cabecera */
 
+
 .cabecera-list{
     display: grid;
     grid-template-columns: 0fr 1fr;
@@ -98,5 +99,13 @@ margin: 1rem 2rem ;
 /*  */
 
 
-
+footer{
+color: white;
+display: flex;
+justify-content: center;
+background-color: rgb(45, 45, 189);
+height: 7.5vh;
+width: 100vw;
+flex-wrap:wrap ;
+}
 
